still a bit off on mobile, and theres all this overflow on the right side ill have to fix

--- a/src/components/Excellence/Excellence.css
+++ b/src/components/Excellence/Excellence.css
@@ -20,10 +20,11 @@
     display: flex;
     justify-content: center;
     font-size: 100%vw;
+    width: 100%;
   
 
-  
-    padding-left:50%;
+  /* same with this if i remove padding left 50% then the text dissapears off to the left i presume but if i put it back then it throws things off to the right */
+    /* padding-left:50%; */
 
   }
 
